* RELEASE 16 PREVIEW 2
- Limit AI artillery units to one escort (w/ offensive artillery AI)
- Separate land & sea retreat rules
- Apply AI naval escort limit to carriers and missile transports
- Make config options more intuitive: anarchy length reduction, minimum city separation, AI naval escort cap
- Re-enable main GUI before showing hotseat AI replay

* RELEASE 16 PREVIEW 1
- Barbarian city capture & production (experimental)
- Can use charm flag to control PTW-like artillery targeting
- Option to ignore king flag on defense, so kings aren't always last to defend in a stack
- Harbor/airport city icons indicate unit effects not trade abilities
- Fix incorrect ETAs in go-to mode when railroad movement is limited
- Can limit the number of escorts the AI assigns to its naval transports
- Fix barbarian diagonal bug
- Optimize improvement loops
- Option to show untradable techs on trade screen
- Option to remove Elvis Easter egg
- Fix cached building maintenance amounts not being updated when buildings are obsoleted
- Load mod button images from scenario folder if present
- Match only complete names from config
- Improve config read error messages

* RELEASE 15
- Option to replay AI moves for human players in hotseat mode
- Enable stealth attacks via bombardment
- Artillery can be set to use PTW-like targeting against cities
- Recon missions can be made vulnerable to interception
- Option to charge one move for recon missions and interception
- Allow players to opt out of stealth attacks
- Polish precision striking by land or sea units
  - Use regular bombard animation instead of flying animation
  - Use bombard range instead of operational range
  - Cannot be intercepted
- Message appears after bomber dodges interception by air defense buildings
- Restore unit directions on game load
- Option to immunize aircraft against bombardment
- Disallow stealth attack against single unit by default
  - Fixes a compatibility issue with the EFZI mod