@@ -112,6 +112,7 @@ struct c3x_config {
 	char show_untradable_techs_on_trade_screen;
 	char optimize_improvement_loops;
 	char enable_city_capture_by_barbarians;
+	char share_visibility_in_hoseat;
 
 	char use_offensive_artillery_ai;
 	int ai_build_artillery_ratio;
