@@ -284,3 +284,6 @@ show_untradable_techs_on_trade_screen = false
 ; automatically. If this option is enabled, there is at least one barb city on the map, and the barb activity level is set to 0 (no barbarians), the
 ; level will be increased to 1 (sedentary) in order not to block barb city production.
 enable_city_capture_by_barbarians = false
+
+; All human players in a hotseat game will share visibility
+share_visibility_in_hoseat = true
